# boids

./: CMakeLists.txt  README.md  main.c  main.cpp  main_omp.c  timeit.h
